Add unbound analysis support for restore snapshot statement.